Fix heading spacing

--- a/Styles/skills.scss
+++ b/Styles/skills.scss
@@ -135,6 +135,8 @@
 
 		@media (min-height: 700px){
 			font-size: 2.2rem;
+			padding-bottom: 3rem;
+			font-size: 3rem;
 		}
 	}
 
